# fingerprint-rust

./: .gitignore  AI_DETECTION_SUMMARY.md  AUDIT_REPORT.md  CHANGELOG.md  CHINESE_COMMENT_TRANSLATION_REPORT.md  CNAME  CODE_DOCUMENTATION_ALIGNMENT_REPORT.md  CODE_DOCUMENTATION_ALIGNMENT_SUMMARY.md  COMMIT_POLICY.md  CONTRIBUTING.md  Cargo.toml  DNS_ENHANCEMENT_SUMMARY.md  DOCUMENTATION_ORGANIZATION.md  EXECUTION_SUMMARY.md  EXECUTION_SUMMARY_PHASE_7_3.md  FINAL_ALIGNMENT_COMPLETION.md  FINAL_PROJECT_STATUS.md  FINGERPRINT_ENHANCEMENT.md  FINGERPRINT_QUICK_REFERENCE.md  FIXES_SUMMARY.md  GITHUB_ACTIONS_SUMMARY.md  GOVERNANCE_ENFORCEMENT_CHECKLIST.md  HONEST_PROGRESS_UPDATE.md  LICENSE  MERGE_INSTRUCTIONS.md  MULTI_REGION_DEPLOYMENT.md  Makefile  NETCONNPOOL_SUCCESS.txt  PHASE_8_DEPLOYMENT_GUIDE.md  PHASE_8_EXECUTION_SUMMARY.md  PHASE_8_FINAL_COMPLETION_REPORT.md  PHASE_9_10_ROADMAP.md  PHASE_9_1_IMPLEMENTATION.md  PHASE_9_2_COMPLETION_REPORT.md  PHASE_9_2_VERIFICATION_GUIDE.md  PHASE_9_3_DEPLOYMENT_GUIDE.md  PHASE_9_3_DEPLOYMENT_READINESS_REPORT.md  PHASE_9_3_IMPLEMENTATION.md  PHASE_9_4_API_GATEWAY_PLAN.md  PHASE_9_4_RUST_INTEGRATION_SUMMARY.md  (+60 more)
crates/fingerprint/: Cargo.toml  README.md
crates/fingerprint-ai-models/: Cargo.toml  README.md
crates/fingerprint-ai-models/examples/: analyze_real_image.rs  analyze_short_video.rs  detect_ai_content.rs  detect_ai_providers.rs  detect_global_providers.rs  learn_model_fingerprints.rs  unified_ai_detector.rs
crates/fingerprint-ai-models/src/: advanced_detection.rs  audio_detection.rs  content_detection.rs  headers.rs  image_detection.rs  lib.rs  model_fingerprints.rs  patterns.rs  providers.rs  real_detection.rs  real_video_detection.rs  sdk.rs  tls.rs  video_detection.rs
crates/fingerprint-analysis/: Cargo.toml
crates/fingerprint-analysis/examples/: comprehensive_analysis.rs
crates/fingerprint-analysis/src/: lib.rs
crates/fingerprint-api-noise/: Cargo.toml  README.md
crates/fingerprint-api-noise/examples/: api_noise_demo.rs
crates/fingerprint-api-noise/src/: audio.rs  canvas.rs  fonts.rs  lib.rs  navigator.rs  screen.rs  webgl.rs
crates/fingerprint-api-noise/tests/: integration_tests.rs
crates/fingerprint-config/: Cargo.toml
crates/fingerprint-config/src/: lib.rs
crates/fingerprint-core/: Cargo.toml  README.md
crates/fingerprint-core/benches/: fingerprint_benchmark.rs  performance.rs
crates/fingerprint-core/examples/: modern_fingerprinting.rs  phase7_identification.rs
crates/fingerprint-core/src/: benchmark.rs  cache.rs  cache_redis.rs  database.rs  error.rs  fingerprint.rs  grease.rs  hassh.rs  hpack.rs  http.rs  http2_frame_parser.rs  incremental_fingerprint.rs  ja3.rs  ja3_database.rs  ja4.rs  jarm.rs  lib.rs  metadata.rs  metrics.rs  packet_capture.rs  pcap_generator.rs  pqc.rs  rate_limiting.rs  rate_limiting_metrics.rs  rate_limiting_redis.rs  signature.rs  stable_hash.rs  tcp.rs  tcp_handshake.rs  tls_parser.rs  types.rs  utils.rs  version.rs  wasm.rs
crates/fingerprint-core/src/dicttls/: cipher_suites.rs  extensions.rs  mod.rs  signature_schemes.rs  supported_groups.rs
crates/fingerprint-core/src/system/: analysis.rs  context.rs  flow.rs  manager.rs  mod.rs  protection.rs  stats.rs
crates/fingerprint-core/tests/: e2e_fingerprint.rs  proptest_ja3.proptest-regressions  proptest_ja3.rs  proptest_ja4.rs  validation.rs
crates/fingerprint-defense/: Cargo.toml  README.md
crates/fingerprint-defense/migrations/: 001_create_flows.sql  002_create_fingerprints.sql  003_create_candidate_fingerprints.sql
crates/fingerprint-defense/src/: anomaly.rs  api_noise.rs  database.rs  hunting.rs  learner.rs  lib.rs  middleware.rs  storage.rs  timing.rs
crates/fingerprint-defense/src/capture/: mod.rs
crates/fingerprint-defense/tests/: learner_test.rs
crates/fingerprint-dns/: Cargo.toml  README.md
crates/fingerprint-dns/src/: lib.rs
crates/fingerprint-gateway/: Cargo.toml  README.md
crates/fingerprint-gateway/benches/: gateway_bench.rs
crates/fingerprint-gateway/src/: auth.rs  config.rs  error.rs  lib.rs  metrics.rs  middleware.rs  models.rs  rate_limit.rs  routes.rs
crates/fingerprint-hardware-unified/: Cargo.toml
crates/fingerprint-hardware-unified/examples/: unified_detection.rs
crates/fingerprint-hardware-unified/src/: lib.rs
crates/fingerprint-headers/: Cargo.toml  README.md
crates/fingerprint-headers/src/: headers.rs  http2_config.rs  lib.rs  useragent.rs
crates/fingerprint-http/: Cargo.toml  README.md
crates/fingerprint-http/src/: lib.rs  quic_fingerprint.rs
crates/fingerprint-observability/: Cargo.toml
crates/fingerprint-observability/src/: lib.rs  metrics.rs  rate_limiting_metrics.rs
crates/fingerprint-parsers/: Cargo.toml
crates/fingerprint-parsers/src/: lib.rs  packet_capture.rs  pcap_generator.rs
crates/fingerprint-profiles/: Cargo.toml  README.md
crates/fingerprint-profiles/src/: lib.rs  profiles.rs  version_adapter.rs  version_detector.rs  version_registry.rs  version_update.rs
crates/fingerprint-profiles/tests/: browser_versions_test.rs
crates/fingerprint-redis/: Cargo.toml
crates/fingerprint-redis/src/: cache.rs  lib.rs  rate_limiting.rs
crates/fingerprint-tls/: Cargo.toml  README.md
crates/fingerprint-tls/src/: lib.rs  tls_extensions.rs
crates/fingerprint/examples/: advanced_performance_benchmark.rs  advanced_performance_benchmark.rs.disabled  hpack_demo.rs  hpack_demo.rs.disabled  packet_capture_demo.rs  psk_0rtt_demo.rs  quic_fingerprint_demo.rs.disabled  sync_demo.rs  tcp_handshake_demo.rs  verify_advanced.rs  verify_chrome_136.rs  verify_chrome_136.rs.disabled  verify_consistency.rs  verify_database.rs  version_adaptation_demo.rs
crates/fingerprint/src/: export.rs  lib.rs  random.rs
crates/fingerprint/tests/: comprehensive_test.rs  connection_pool_test.rs  custom_tls_fingerprint_test.rs  dns_service_test.rs  google_earth_test.rs  http2_config_test.rs  http_client_test.rs  integration_test.rs  performance_test.rs  tcp_server_test.rs  tcp_sync_demo_test.rs  test_collector_standalone.rs  test_tcp_fingerprint_sync.rs  tls_extensions_test.rs
(+5344 files in other folders)
