[workspace]
members = [
    "crates/fingerprint",
    "crates/fingerprint-ai-models",
    "crates/fingerprint-api-noise",
    "crates/fingerprint-audio",
    "crates/fingerprint-canvas",
    "crates/fingerprint-core",
    "crates/fingerprint-defense",
    "crates/fingerprint-dns",
    "crates/fingerprint-fonts",
    "crates/fingerprint-gateway",
    "crates/fingerprint-hardware",
    "crates/fingerprint-headers",
    "crates/fingerprint-http",
    "crates/fingerprint-ml",
    "crates/fingerprint-observability",
    "crates/fingerprint-parsers",
    "crates/fingerprint-profiles",
    "crates/fingerprint-redis",
    "crates/fingerprint-storage",
    "crates/fingerprint-tls",
    "crates/fingerprint-webgl",
    "crates/fingerprint-webrtc",
]
default-members = [
    "crates/fingerprint",
    "crates/fingerprint-api-noise",
    "crates/fingerprint-core",
    "crates/fingerprint-defense",
    "crates/fingerprint-dns",
    "crates/fingerprint-gateway",
    "crates/fingerprint-headers",
    "crates/fingerprint-http",
    "crates/fingerprint-parsers",
    "crates/fingerprint-profiles",
    "crates/fingerprint-tls",
]
exclude = [
    "crates/fingerprint-analysis",
    "crates/fingerprint-anomaly",
    "crates/fingerprint-config",
    "crates/fingerprint-hardware-unified",
    "crates/fingerprint-timing",
    "vendor/netconnpool-rust",
]
resolver = "2"

[workspace.package]
version = "2.1.0"
edition = "2021"
authors = ["fingerprint-rust Authors"]
license = "BSD-3-Clause"
repository = "https://github.com/vistone/fingerprint-rust"
documentation = "https://docs.rs/fingerprint-rust"
homepage = "https://github.com/vistone/fingerprint-rust"
description = "Advanced browser fingerprinting library"
keywords = ["fingerprint", "tls", "http", "security", "browser"]
categories = ["network-programming", "web-programming"]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "2.0"
log = "0.4"
dashmap = "5.5"
parking_lot = "0.12"
hex = "0.4"
chrono = "0.4"
bytes = "1.0"
rand = "0.8"
sha2 = "0.10"
md5 = "0.7"
regex = "1.0"
once_cell = "1.0"
lru = "0.16"
brotli-decompressor = "4.0"
flate2 = "1.0"
h2 = "0.4"
http = "1.0"
httparse = "1.9"
socket2 = "0.6"
rustls = "0.23"
ring = "0.17.14"
webpki-roots = "0.26"
tokio-rustls = "0.26"
quinn = "0.11"
netconnpool = { path = "vendor/netconnpool-rust" }
futures = "0.3"
hickory-resolver = "0.25"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
pcap-file = "3.0.0-rc1"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = 3

[profile.release-service]
inherits = "release"
panic = "unwind"
