[package]
name = "fingerprint-ai-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
