[package]
name = "fingerprint-ai-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
image = "0.24"
chrono = "0.4"
regex = "1.0"
lru = "0.12"

# Video processing (note: requires ffmpeg to be installed on system)
# For production: would use ffmpeg-next or opencv bindings
# For now: we'll implement frame-based analysis that can work with extracted frames

[features]
# Features for compatibility with workspace features
# These are pass-through features that don't add functionality to this crate
# but allow workspace-wide feature builds like `--all-features` to work
default = []
rustls-tls = []
compression = []
http2 = []
http3 = []
async = []
connection-pool = []
reporter = []
export = []
crypto = []
dangerous_configuration = []
rustls-client-hello-customizer = []
dns = []
defense = []
api-noise = []

[dev-dependencies]
