[package]
name = "fingerprint-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "核心类型和工具函数模块"

[dependencies]
rand.workspace = true
once_cell.workspace = true
sha2.workspace = true
md5.workspace = true
hex = "0.4"
thiserror.workspace = true
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "fingerprint_benchmark"
harness = false


