[package]
name = "fingerprint-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "核心类型和工具函数模块"

[dependencies]
rand.workspace = true
once_cell.workspace = true
sha2.workspace = true
md5.workspace = true
hex = "0.4"
thiserror.workspace = true
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
dashmap = "5.5"
parking_lot = "0.12"
lru = "0.16"
tokio = { workspace = true, features = ["sync"] }

# Optional Redis support
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"], optional = true }

[features]
default = []
redis-cache = ["redis"]

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "fingerprint_benchmark"
harness = false


