[package]
name = "fingerprint-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "核心类型和工具函数模块"

[dependencies]
rand.workspace = true
once_cell.workspace = true
sha2.workspace = true
md5.workspace = true
xxhash-rust.workspace = true
hex = "0.4"
thiserror.workspace = true
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
async-trait = "0.1"
dashmap = { version = "5.5", optional = true }
parking_lot = { version = "0.12", optional = true }
lru = { version = "0.16", optional = true }
tokio = { workspace = true, features = ["sync"] }

[features]
default = []
# Compatibility escape hatches. Prefer the layered service features below for
# new consumers so the supported feature matrix stays finite and testable.
service-cache = ["dep:lru"]
service-metrics = []
service-rate-limiting = ["dep:dashmap", "dep:parking_lot"]
redis-cache = []

# Recommended layered service features.
service-runtime = ["service-cache", "service-rate-limiting"]
service-observability = ["service-runtime", "service-metrics"]
service-distributed = ["service-runtime", "redis-cache"]
service-full = ["service-observability", "service-distributed"]

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
fingerprint-parsers = { path = "../fingerprint-parsers" }
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "fingerprint_benchmark"
harness = false
