[package]
name = "fingerprint-defense"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Self-learning defense system with fingerprint database"
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords = ["security", "defense", "fingerprint", "database", "learning"]
categories = ["network-programming", "security"]

[dependencies]
# Core dependencies
fingerprint-core = { path = "../fingerprint-core" }
fingerprint-tls = { path = "../fingerprint-tls" }
fingerprint-http = { path = "../fingerprint-http" }
# fingerprint-ja4 = { path = "../fingerprint-ja4" } # Replaced by fingerprint-tls internal JA4

# Database library
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Time handling
chrono = { workspace = true, features = ["serde"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }
dashmap = "5.5"

# Error processing
thiserror.workspace = true

# Utilities
once_cell = { workspace = true }

# Network packet parsing (pure Rust implementation, no system dependencies)
pcap-file = "3.0.0-rc1"

# pcap file parsing (pure Rust)
pnet = "0.35.0" # Real-time network capture (pure Rust)
bytes = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
