[package]
name = "fingerprint-dns"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "DNS 预解析服务模块"

[dependencies]
fingerprint-core = { path = "../fingerprint-core" }
fingerprint-http = { path = "../fingerprint-http", default-features = false, features = ["rustls-tls"] }

# DNS 解析功能
hickory-resolver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
thiserror.workspace = true
