[package]
name = "fingerprint-dns"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "DNS parsing务module"

[features]
default = []
# hickory-resolver functionality（defaultenable，因为它Core dependencies）
hickory-resolver = []

[dependencies]
fingerprint-core = { path = "../fingerprint-core" }
fingerprint-http = { path = "../fingerprint-http", default-features = false, features = ["rustls-tls"] } # DNS parsingfunctionality
hickory-resolver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
thiserror.workspace = true
