[package]
name = "fingerprint-gateway"
version = "0.1.0"
edition = "2021"
authors = ["fingerprint-rust team"]
description = "High-performance API Gateway with rate limiting for fingerprint-rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vistone/fingerprint-rust"

[dependencies]
# Web framework
actix-web = "4.9"
actix-rt = "2.10"
actix-cors = "0.7"

# Rate limiting backend
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "cluster"] }
bb8-redis = "0.14"
bb8 = "0.8"

# Metrics
prometheus = { version = "0.13", features = ["process"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"

# Utilities
dashmap = "6.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
lazy_static = "1.4"

# Workspace dependencies
fingerprint = { path = "../fingerprint" }

[dev-dependencies]
actix-web = "4.9"
mockall = "0.13"
criterion = "0.5"

[features]
default = ["redis-backend"]
redis-backend = []
in-memory = []

[[bin]]
name = "gateway"
path = "src/bin/gateway.rs"

[[bench]]
name = "gateway_bench"
harness = false
