[package]
name = "fingerprint-hardware-unified"
version = "2.1.0"
edition = "2021"
authors = ["fingerprint-rust Authors"]
description = "Unified hardware fingerprint detection module"
license = "MIT"

[dependencies]
fingerprint-core = { path = "../fingerprint-core", version = "2.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rand = "0.8"
log = "0.4"
dashmap = "5.5"

[features]
default = []
canvas = []
webgl = []
audio = []
fonts = []
storage = []
webrtc = []
full = ["canvas", "webgl", "audio", "fonts", "storage", "webrtc"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }