[package]
name = "fingerprint-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HTTP clientimplementation module（HTTP/1.1、HTTP/2、HTTP/3）"

[dependencies]
fingerprint-core = { path = "../fingerprint-core" }
fingerprint-tls = { path = "../fingerprint-tls" }
fingerprint-profiles = { path = "../fingerprint-profiles" }
fingerprint-headers = { path = "../fingerprint-headers" }
once_cell = { workspace = true }
socket2 = { workspace = true } # HTTP client dependencies (optional)
rustls = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
brotli-decompressor = { workspace = true, optional = true } # HTTP/2 support
h2 = { workspace = true, optional = true }
http = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true } # HTTP/3 support
quinn = { workspace = true, optional = true }
h3 = { workspace = true, optional = true }
h3-quinn = { workspace = true, optional = true }
bytes = { workspace = true, optional = true } # Network connection pool
netconnpool = { workspace = true, optional = true } # Time handling
chrono = { workspace = true, optional = true } # HTTP parsing
httparse = { workspace = true, optional = true } # Cryptography library
ring = { workspace = true, optional = true }

[features]
default = ["rustls-tls", "compression", "http2"]
rustls-tls = ["rustls", "webpki-roots"]
compression = ["flate2", "brotli-decompressor"]
http2 = ["h2", "http", "tokio", "tokio-rustls", "rustls", "webpki-roots", "bytes"]
http3 = ["quinn", "h3", "h3-quinn", "tokio", "rustls", "webpki-roots", "bytes"]
async = ["tokio"]
connection-pool = ["netconnpool", "httparse"]
reporter = ["chrono"]
crypto = ["ring"]
dangerous_configuration = []
rustls-client-hello-customizer = []
