[package]
name = "fingerprint-profiles"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Browser fingerprintconfiguration module"

[dependencies]
fingerprint-core = { path = "../fingerprint-core" }
fingerprint-tls = { path = "../fingerprint-tls" }
fingerprint-headers = { path = "../fingerprint-headers" }
