[package]
name = "fingerprint-tls"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "TLS 配置、扩展和握手模块"

[dependencies]
fingerprint-core = { path = "../fingerprint-core" }
sha2.workspace = true
thiserror.workspace = true
rand = { workspace = true, optional = true }
ring = { workspace = true, optional = true }

[features]
# 安全修复：默认启用 crypto feature，确保在所有平台上都能正常工作
# 如果不启用 crypto，在 Windows 等没有 /dev/urandom 的系统上会运行时失败
default = ["crypto"]
crypto = ["ring", "rand"]  # 真实密钥生成（用于 TLS Handshake）
