[package]
name = "fingerprint-tls"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "TLS configuration extension and handshake module"

[dependencies]
fingerprint-core = { path = "../fingerprint-core" }
sha2.workspace = true
thiserror.workspace = true
rand = { workspace = true, optional = true }
ring = { workspace = true, optional = true }

[features]
# Security fix: enable crypto feature by default to ensure all platforms work correctly
# Without crypto enabled, it will fail on systems without /dev/urandom (like Windows)
default = ["crypto"]
crypto = ["ring", "rand"] # Real key generation (for TLS Handshake)
